Feat: 2번째 페이지 일본어 번역작업 완료

--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -7,5 +7,12 @@
   "결혼": "결혼",
   "합니다.": "합니다.",
   "2023년 12월 09일 토요일 오후 다섯시": "2023년 12월 09일 토요일 오후 다섯시",
-  "라온제나 분당 플로렌스 단독홀": "라온제나 분당 플로렌스 단독홀"
+  "라온제나 분당 플로렌스 단독홀": "라온제나 분당 플로렌스 단독홀",
+  "미스즈": "미스즈",
+  "이 규근": "이 규근",
+  "손 란": "손 란",
+  "오쿠다이라 카즈오": "오쿠다이라 카즈오",
+  "오쿠다이라 미츠코": "오쿠다이라 미츠코",
+  "의 장남": "의 장남",
+  "의 차녀": "의 차녀"
 }
