Feat: 식장 안내 페이지 일본어 작업 완료

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -6,8 +6,9 @@
   "우리": "私たち、",
   "결혼": "結婚",
   "합니다.": "します。",
-  "2023년 12월 09일 토요일 오후 다섯시": "2023年12月09日・土曜日　午後５時",
-  "라온제나 분당 플로렌스 단독홀": "ラオンゼナ・ブンダン　プローレンスホール",
+  "2023년 12월 09일 토요일 오후 다섯시": "2023年12月09日・土曜日 午後５時",
+  "라온제나 분당 플로렌스 단독홀": "ラオンゼナ・ブンダン プローレンスホール",
+  "라온제나 분당": "ラオンゼナ・ブンダン",
   "미스즈": "美鈴",
   "이 규근": "李 圭根",
   "손 란": "孫 蘭",
@@ -15,5 +16,19 @@
   "오쿠다이라 미츠코": "奥平 美津子",
   "의 장남": "の長男",
   "의 차녀": "の次女",
-  "갤러리": "ギャラリー"
+  "갤러리": "ギャラリー",
+  "웨딩홀 안내": "式場案内",
+  "경기도 성남시 분당구 성남대로 916번길 5": "キョンギド ソンナムデロ 916(グベクシブユク)ボンギル 5",
+  "관보빌딩 8층": "グァンボビルジング 8回",
+  "지하철": "地下鉄",
+  "수인분당선": "スインブンダンソン",
+  "야탑역": "ヤタプ駅",
+  "2번출구": "2番出口",
+  "버스": "バス",
+  "정류장": "停留場",
+  "하차": "下車",
+  "공항버스": "空港バス",
+  "인천공항 1터미널": "仁川空港 1ターミナル",
+  "인청공항 2터미널": "仁川空港 2ターミナル",
+  "아래 버튼을 클릭하시면 더 자세히 보실 수 있습니다.": "下のボタンを押すと詳細を見ることができます。"
 }
