--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -8,11 +8,27 @@
   "합니다.": "합니다.",
   "2023년 12월 09일 토요일 오후 다섯시": "2023년 12월 09일 토요일 오후 다섯시",
   "라온제나 분당 플로렌스 단독홀": "라온제나 분당 플로렌스 단독홀",
+  "라온제나 분당": "라온제나 분당",
   "미스즈": "미스즈",
   "이 규근": "이 규근",
   "손 란": "손 란",
   "오쿠다이라 카즈오": "오쿠다이라 카즈오",
   "오쿠다이라 미츠코": "오쿠다이라 미츠코",
   "의 장남": "의 장남",
-  "의 차녀": "의 차녀"
+  "의 차녀": "의 차녀",
+  "갤러리": "갤러리",
+  "웨딩홀 안내": "웨딩홀 안내",
+  "경기도 성남시 분당구 성남대로 916번길 5": "경기도 성남시 분당구 성남대로 916번길 5",
+  "관보빌딩 8층": "관보빌딩 8층",
+  "지하철": "지하철",
+  "수인분당선": "수인분당선(구, 분당선)",
+  "야탑역": "야탑역",
+  "2번출구": "2번출구",
+  "버스": "버스",
+  "정류장": "정류장",
+  "하차": "하차",
+  "공항버스": "공항버스",
+  "인천공항 1터미널": "인천공항 1터미널",
+  "인청공항 2터미널": "인천공항 2터미널",
+  "아래 버튼을 클릭하시면 더 자세히 보실 수 있습니다.": "아래 버튼을 클릭하시면 더 자세히 보실 수 있습니다."
 }
