Feat: 1터미널, 2터미널 버튼 클릭시 이미지 추가

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -18,7 +18,7 @@
   "의 차녀": "の次女",
   "갤러리": "ギャラリー",
   "웨딩홀 안내": "式場案内",
-  "경기도 성남시 분당구 성남대로 916번길 5": "キョンギド ソンナムデロ 916(グベクシブユク)ボンギル 5",
+  "경기도 성남시 분당구 성남대로 916번길 5": "キョンギド ソンナムデロ 916ボンギル 5",
   "관보빌딩 8층": "グァンボビルジング 8回",
   "지하철": "地下鉄",
   "수인분당선": "スインブンダンソン",
