Text: 장모님 피드백 반영

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -1,7 +1,7 @@
 {
   "희현": "喜鉉",
   "이 희현": "李 喜鉉",
-  "그리고": "そして",
+  "그리고": "アンド",
   "오쿠다이라 미스즈": "奥平 美鈴",
   "우리": "私たち、",
   "결혼": "結婚",
@@ -14,8 +14,8 @@
   "손 란": "孫 蘭",
   "오쿠다이라 카즈오": "奥平 和生",
   "오쿠다이라 미츠코": "奥平 美津子",
-  "의 장남": "の長男",
-  "의 차녀": "の次女",
+  "의 장남": "長男",
+  "의 차녀": "次女",
   "갤러리": "ギャラリー",
   "웨딩홀 안내": "式場案内",
   "경기도 성남시 분당구 성남대로 916번길 5": "キョンギド ソンナムデロ 916ボンギル 5",
