--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -30,5 +30,6 @@
   "공항버스": "空港バス",
   "인천공항 1터미널": "仁川空港 1ターミナル",
   "인천공항 2터미널": "仁川空港 2ターミナル",
-  "아래 버튼을 클릭하시면 더 자세히 보실 수 있습니다.": "下のボタンを押すと詳細を見ることができます。"
+  "아래 버튼을 클릭하시면 더 자세히 보실 수 있습니다.": "下のボタンを押すと詳細を見ることができます。",
+  "방명록": "ゲストブック"
 }
