text: 일본어 추가

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -31,5 +31,12 @@
   "인천공항 1터미널": "仁川空港 1ターミナル",
   "인천공항 2터미널": "仁川空港 2ターミナル",
   "아래 버튼을 클릭하시면 더 자세히 보실 수 있습니다.": "下のボタンを押すと詳細を見ることができます。",
-  "방명록": "ゲストブック"
+  "방명록": "ゲストブック",
+  "작성": "作成",
+  "이름": "名前",
+  "비밀번호": "パスワード",
+  "글 수정,삭제만을 위해 사용되는 비밀번호": "修正, 削除のみを目的とするパスワード",
+  "닫기": "閉じる",
+  "내용": "内容",
+  "캘린더에 추가하기": "カレンダーに追加する"
 }
